--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "電卓",
   "short_name": "電卓",
   "description": "シンプルな電卓アプリ",
-  "start_url": "/app",
+  "start_url": "https://www.rikolog.net/app",
   "scope": "/",
   "display": "standalone",
   "background_color": "#000000",
